syntax = "proto3";

option java_multiple_files = true;
option java_package = "booking";

service BookingService{
  rpc CheckBooking(BookingRequest) returns (BookingResponse);
}

message BookingRequest{
  string bookingId = 1;
}

message BookingResponse{
  bool exists = 1;
  optional double totalPrice = 2;
  string message = 3;
}